--- a/salesforce champ/force-app/main/default/lwc/wireCallApexExample/wireCallApexExample.html
+++ b/salesforce champ/force-app/main/default/lwc/wireCallApexExample/wireCallApexExample.html
@@ -4,7 +4,7 @@
                 <template for:each={Accounts} for:item="Account">
                      <div key={Account.id}> 
                         <div class="addData" >
-                            {Account.Industry}
+                            <p>{Account.Industry}</p>
                         </div>
                      </div>
                 </template>
